<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/garbage_All"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/spinerTypeBorder"
        style="@style/spinner_style"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:cardCornerRadius="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:strokeColor="@color/black"
        app:strokeWidth="1dp">

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/spinerType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            style="@style/spinner_style"
            android:spinnerMode="dialog"
            />
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/clearAll"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="5dp"
        android:layout_marginTop="10dp"
        android:text="@string/clear_all"
        android:textSize="13sp"
        app:backgroundTint="@color/black"
        app:cornerRadius="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinerTypeBorder" />

    <View
        android:id="@+id/line2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/clearAll" />


    <LinearLayout
        android:id="@+id/header_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/line2">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="@string/id_cells"
                android:textSize="12sp" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginStart="2dp"
                android:background="@color/black" />

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/number_cells"
                android:textSize="12sp" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginStart="4dp"
                android:background="@color/black" />

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/name"
                android:textSize="12sp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_gravity="bottom"
            android:background="@color/black" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header_title">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/line2"
            tools:listitem="@layout/card_garbage" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:baselineAligned="false"
            android:indeterminateTint="@color/black"
            android:visibility="gone" />

        <TextView
            android:id="@+id/placeholderMesage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:text="Список пуст"
            android:textSize="20sp"
            android:visibility="gone" />
    </LinearLayout>

</LinearLayout>